--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -8,7 +8,7 @@
 }
 
 .logo p {
-  font-family: 'Proxima Nova', sans-serif;
+  font-weight: 400;
   font-size: 12px;
   color: #222525;
   line-height: 0px;
