--- a/styles/Pledge.module.css
+++ b/styles/Pledge.module.css
@@ -1,43 +1,51 @@
 .pledge {
   display: flex;
   justify-content: center;
-  margin-top: 35px;
-  font-family: 'Proxima Nova', sans-serif;
+  margin-top: 30px;
 }
 
 .imgDiv {
-  width: 28%;
-  margin-top: 25px;
+  width: 30%;
+}
+
+.imgDiv p {
+  margin-top: 5px;
+  text-decoration: underline;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 20px;
+  color: #222525;
 }
 
 .img {
+  margin-top: 30px;
   margin-left: 25%;
 }
 
 .imgDiv span {
-  margin-top: 13%;
-  padding: 6px 16px;
+  margin-top: 30%;
+  padding: 8px 16px;
   border-radius: 100px;
   font-size: 14px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .gtc {
   float: left;
-  margin-left: 7%;
+  margin-left: 10%;
   color: #ffffff;
   background-color: #000000;
 }
 
 .gvrn {
   float: right;
-  margin-right: 17%;
+  margin-right: 20%;
   color: #000000;
   background-color: #23db5c;
 }
 
 .descDiv {
-  width: 47%;
+  width: 50%;
 }
 
 .descDiv h2 {
@@ -49,6 +57,7 @@
 
 .description {
   margin-top: 30px;
+  font-weight: 600;
   font-size: 14px;
   line-height: 20px;
   color: #1d0039;
@@ -66,17 +75,18 @@
 .donation p {
   margin-top: 10px;
   font-size: 18px;
+  font-weight: 400;
   line-height: 24px;
   color: #222525;
 }
 
 .descDiv button {
-  margin-top: 25px;
+  margin-top: 15px;
   border-style: solid;
   border-width: 2px;
   border-color: #e02097;
   border-radius: 5px;
-  padding: 6px 12px;
+  padding: 8px 12px;
   font-size: 14px;
   font-weight: 700;
   color: #ffffff;
@@ -88,12 +98,56 @@
   background-color: #b41b79;
 }
 
-.pledgeBtn {
-  float: left;
-  margin-left: 7%;
+.actionForm {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 43%;
+  border: 1px solid #f2f4f6;
+  border-radius: 6px;
+  padding: 5px 12px;
 }
 
-.applyBtn {
+.actionForm h6 {
+  text-align: center;
+  font-weight: 700;;
+  font-size: 17px;
+  line-height: 26px;
+  color: #222525;
+}
+
+.actionForm p {
+  min-height: 60px;
+  margin-top: 20px;
+  text-align: center;
+  font-style: italic;
+  color: #222525;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+}
+
+.actionForm input {
+  margin-top: 10px;
+  height: 48px;
+  border: 1px solid #f2f4f6;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.actionForm input:focus {
+  border-color: #e02097; 
+}
+
+.float_left {
+  float: left;
+  margin-left: 13px;
+}
+
+.float_right {
   float: right;
-  margin-right: 7%;
+  margin-right: 13px;
 }
