--- a/styles/Status.module.css
+++ b/styles/Status.module.css
@@ -1,5 +1,4 @@
 .status {
-  font-family: 'Proxima Nova', sans-serif;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   margin: 35px 8%;
@@ -9,13 +8,14 @@
 .status h3 {
   margin-bottom: 12px;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 30px;
   color: #1d0039;
 }
 
-.status p {
+.statusDesc {
   margin-bottom: 26px;
+  font-weight: 600;
   font-size: 14px;
   line-height: 20px;
   color: #222525;
