--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Proxima+Nova&display=swap');
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('../assets/fonts/Proxima-Nova-Reg.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('../assets/fonts/Proxima-Nova-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('../assets/fonts/Proxima-Nova-Light.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+body {
+  font-family: 'Proxima Nova';
+}
 
 a {
   text-decoration: none;
@@ -33,7 +65,7 @@ a {
 }
 
 #WEB3_CONNECT_MODAL_ID {
-  font-family: 'Proxima Nova', sans-serif;
+  font-weight: 600;
 }
 
 .walletconnect-modal__mobile__toggle {
